# aswe-copilot-2025

./: README.md
.github/: copilot-instructions.md
.github/agents/: code-reviewer.agent.md
.github/prompts/: review-code.prompt.md
docs/plans/: priority-filter.md
todo-app/: README.md  pyproject.toml  todo.db
todo-app/src/app/: main.py
todo-app/src/app/routes/: auth.py  pages.py  todo_lists.py  todos.py
todo-app/src/app/static/css/: styles.css
todo-app/src/app/static/js/: app.js
todo-app/src/app/templates/: app.html
todo-app/src/app/templates/partials/: title_update_oob.html  todo_deleted_oob.html  todo_item_with_oob.html  todo_list_content.html  todo_list_item_with_oob.html
todo-app/tests/: conftest.py  test_browser_title.py  test_integration.py  test_todos.py
