[project]
name = "todo-app"
version = "0.1.0"
description = "Modern todo application with FastAPI, HTMX, and Shoelace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.0.0",
    # NOTE: In production, pytest/httpx should be dev dependencies ([project.optional-dependencies])
    # Included here for workshop simplicity - just `uv sync` and tests work immediately
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "bcrypt>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
